# ros_talker_cookiecutter

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  cookiecutter.json  package.xml  rosdoc.yaml
.github/: README.md
config/: reconf.cfg
doc/: mainpage.md  manifest.yaml
doc/html/: README_8md.html  annotated.html  classes.html  classros__package__template_1_1Template-members.html  classros__package__template_1_1Template.html  dir_000003_000001.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  files.html  globals.html  (+25 more)
launch/: #{PKG_NAME}.launch  template.launch
src/: #{PKG_NAME}_node.cpp  #{PKG_NAME}_ros.cpp  template_node.cpp  template_ros.cpp
{{cookiecutter.pkg_name}}/: CMakeLists.txt  README.md  package.xml  rosdoc.yaml
{{cookiecutter.pkg_name}}/config/: reconf.cfg
{{cookiecutter.pkg_name}}/doc/: mainpage.md
{{cookiecutter.pkg_name}}/doc/html/: README_8md.html  dir_392b3d81a6df0c680455c9c6af49c5f6.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_e68e8157741866f444e17edd764ebbae.html  functions.html  globals_vars.html  index-msg.html  index.html  mainpage_8md.html  namespaceros__package__template.html  other_8md.html  reconfigure_8hpp__dep__incl.md5  reconfigure_8hpp__incl.map  reconfigure_8hpp__incl.md5  template__node_8cpp__incl.md5  template__ros_8cpp.html  template__ros_8cpp__incl.map  template__ros_8cpp__incl.md5  template__ros_8hpp.html  template__ros_8hpp__dep__incl.map  template__ros_8hpp__dep__incl.md5  template__ros_8hpp__incl.map  template__ros_8hpp__incl.md5
{{cookiecutter.pkg_name}}/include/{{cookiecutter.pkg_name}}/: reconfigure.h  {{cookiecutter.pkg_name}}_ros.h
{{cookiecutter.pkg_name}}/launch/: {{cookiecutter.pkg_name}}.launch
{{cookiecutter.pkg_name}}/src/: {{cookiecutter.pkg_name}}_node.cpp  {{cookiecutter.pkg_name}}_ros.cpp
(+10 files in other folders)
